<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/meal_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/document_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="Document Title" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/document_name"
        android:id="@+id/myRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choiceW2"
            android:text="@string/choice_w2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choiceVoidedCheck"
            android:text="@string/choice_voided_check"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choiceUtilityBill"
            android:text="@string/choice_utility_bill"/>
    </RadioGroup>

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_photo" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text" />

    <ImageView
        android:id="@+id/document_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />

</LinearLayout>